# Tangram

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile  Rapport.docx  Tangram.mdj  Tangram.plantuml  Tangram.uml  Tangram_light.plantuml  projet_concepts_C++_utilises.odt  ~$apport.docx  ~$ojet_concepts_C++_utilises.odt  ~WRL2486.tmp
doc/html/: _action_8h_source.html  _action_manager_8h_source.html  _button_8h_source.html  _clickable_8h_source.html  _drawable_8h_source.html  _file_utils_8h_source.html  _game_8h_source.html  _game_builder_8h_source.html  _game_manager_8h_source.html  _menu_8h_source.html  _piece_8h_source.html  _point_8h.html  _point_8h_source.html  _preferences_8h_source.html  _shape_8h_source.html  _triangle_8h_source.html  annotated.html  class_action-members.html  class_action.html  class_action_manager-members.html  class_action_manager.html  class_button-members.html  class_button.html  class_clickable-members.html  class_clickable.html  class_drawable-members.html  class_drawable.html  class_file_utils-members.html  class_file_utils.html  class_game-members.html  class_game.html  class_game_builder-members.html  class_game_builder.html  class_game_manager-members.html  class_game_manager.html  class_menu-members.html  class_menu.html  class_piece-members.html  class_piece.html  class_point-members.html  (+17 more)
doc/latex/: _point_8h.tex  annotated.tex  class_action.tex  class_action_manager.tex  class_button.eps  class_button.tex  class_clickable.eps  class_clickable.tex  class_drawable.eps  class_drawable.tex  class_file_utils.tex  class_game.tex  class_game_builder.tex  class_game_manager.tex  class_menu.eps  class_menu.tex  class_piece.eps  class_piece.tex  class_point.tex  class_preferences.tex  class_shape.eps  class_shape.tex  class_triangle.eps  class_triangle.tex  files.tex  hierarchy.tex  refman.tex
include/Controller/: Action.h  ActionManager.h  Clickable.h  FileUtils.h  Game.h  (+3 more)
levels/: 1-int.txt  1.txt  4.txt  5.txt  6.txt  bateau.txt  bougie.txt  emeraude.txt  lapin.txt  lievre.txt  maison.txt  poisson.txt
src/: Main.cpp  Main.h
(+68 files in other folders)
